# catalyst

./: LICENSE  README.md  pyproject.toml  requirements.txt
examples/: basic_usage.py  dry_run.py
src/catalyst/: __init__.py
src/catalyst/core/: executor.py  inventory.py  logger.py
