[project]
name = "catalyst-automation"
version = "0.1.0"
description = "A powerful infrastructure automation framework"
authors = [{name = "Yogesh Upadhyay", email = "iyogeshupadhya@gmail.com"}]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Systems Administration",
]

[project.dependencies]
paramiko = "^2.12.0"
pyyaml = "^6.0"
click = "^8.1.3"
rich = "^13.0.0"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "isort>=5.0",
    "mypy>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"